--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2341,6 +2341,9 @@ body {
   .leftnav a:hover {
     fill: #0023ff; }
 
+a.fillblue {
+  fill: #0023ff; }
+
 @media (min-width: 576px) {
   .leftnav {
     position: fixed;
@@ -2628,6 +2631,17 @@ body {
 .products .rightnav__icon {
   margin-right: 0; }
 
+.products__more {
+  padding-top: 20px;
+  display: block;
+  color: #0023ff;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 100px;
+  font-weight: bold; }
+  .products__more:hover {
+    text-decoration: underline; }
+
 @media (min-width: 576px) {
   .products {
     margin-left: 100px; } }
@@ -2830,3 +2844,159 @@ body {
     font-size: 28px; }
   .order2 .card__price {
     font-size: 28px; } }
+
+/*** SEARCH ***/
+.search {
+  position: fixed;
+  top: 82px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  background-color: rgba(255, 255, 255, 0.9); }
+  @media (min-width: 576px) {
+    .search {
+      margin-left: 100px;
+      top: 0; } }
+  @media (min-width: 992px) {
+    .search {
+      margin-left: 120px; } }
+  @media (min-width: 1200px) {
+    .search {
+      margin-left: 146px; } }
+  .search__result {
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 50px;
+    padding-bottom: 50px; }
+    @media (min-width: 576px) {
+      .search__result {
+        padding-top: 75px;
+        padding-bottom: 75px; } }
+    @media (min-width: 768px) {
+      .search__result {
+        padding-top: 100px;
+        padding-bottom: 100px; } }
+    @media (min-width: 992px) {
+      .search__result {
+        padding-top: 150px;
+        padding-bottom: 150px; } }
+    @media (min-width: 1200px) {
+      .search__result {
+        padding-top: 200px;
+        padding-bottom: 200px; } }
+  .search__name {
+    font-size: 46px;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: #000; }
+    @media (min-width: 768px) {
+      .search__name {
+        font-size: 56px; } }
+    @media (min-width: 992px) {
+      .search__name {
+        font-size: 62px; } }
+    @media (min-width: 1200px) {
+      .search__name {
+        font-size: 72px; } }
+  .search__label {
+    display: block;
+    font-size: 18px;
+    font-weight: 300;
+    color: #a8a8a8; }
+    @media (min-width: 576px) {
+      .search__label {
+        font-size: 24px; } }
+    @media (min-width: 768px) {
+      .search__label {
+        font-size: 36px; } }
+  .search__link {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    @media (min-width: 576px) {
+      .search__link {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+                flex-direction: row; } }
+  .search__img {
+    max-height: 205px; }
+  .search__input {
+    display: block;
+    width: 100%;
+    border: none;
+    font-size: 60px;
+    font-weight: 100;
+    outline: none;
+    border-bottom: 2px solid #c1c1c1;
+    margin-bottom: 20px; }
+    @media (min-width: 576px) {
+      .search__input {
+        font-size: 80px; } }
+    @media (min-width: 768px) {
+      .search__input {
+        font-size: 110px; } }
+    @media (min-width: 992px) {
+      .search__input {
+        font-size: 125px; } }
+    @media (min-width: 1200px) {
+      .search__input {
+        font-size: 140px; } }
+  .search__form {
+    position: relative;
+    margin-top: 100px;
+    margin-bottom: 60px; }
+    @media (min-width: 576px) {
+      .search__form {
+        margin-top: 120px;
+        margin-bottom: 85px; } }
+    @media (min-width: 768px) {
+      .search__form {
+        margin-top: 120px;
+        margin-bottom: 100px; } }
+    @media (min-width: 992px) {
+      .search__form {
+        margin-top: 150px;
+        margin-bottom: 150px; } }
+    @media (min-width: 1200px) {
+      .search__form {
+        margin-top: 200px;
+        margin-bottom: 200px; } }
+  .search__clear {
+    position: absolute;
+    color: #a8a8a8;
+    font-weight: 100;
+    font-size: 60px;
+    right: 0;
+    top: 0px; }
+    @media (min-width: 576px) {
+      .search__clear {
+        font-size: 70px;
+        top: 10px; } }
+    @media (min-width: 768px) {
+      .search__clear {
+        font-size: 80px;
+        top: 25px; } }
+    @media (min-width: 992px) {
+      .search__clear {
+        font-size: 90px;
+        top: 33px; } }
+    @media (min-width: 1200px) {
+      .search__clear {
+        top: 40px; } }
+
+.bg {
+  background: url("../img/bg.png") no-repeat 50% 0;
+  background-size: cover; }
